src/manipulator/snapshots/annatto__manipulator__re__tests__delete_subgraph.snap
---
source: src/manipulator/re.rs
expression: graphml
---
<?xml version="1.0" encoding="UTF-8"?>
<graphml>
    <key id="k0" for="graph" attr.name="configuration" attr.type="string"/>
    <key id="k1" for="node" attr.name="annis::node_type" attr.type="string"/>
    <graph edgedefault="directed" parse.order="nodesfirst" parse.nodeids="free" parse.edgeids="canonical">
        <data key="k0"><![CDATA[
# configure visualizations here
]]></data>
        <node id="root">
            <data key="k1">corpus</data>
        </node>
    </graph>
</graphml>
