src/manipulator/snapshots/annatto__manipulator__re__tests__fail_delete_subgraph.snap
---
source: src/manipulator/re.rs
expression: manipulation.err().unwrap().to_string()
---
Node with name "root/non-existing-node" does not exist, subgraph cannot be identified or removed.
