src/manipulator/snapshots/annatto__manipulator__re__tests__remove_by_query.snap
---
source: src/manipulator/re.rs
expression: export.unwrap()
---
<?xml version="1.0" encoding="UTF-8"?>
<graphml>
    <key id="k0" for="graph" attr.name="configuration" attr.type="string"/>
    <key id="k1" for="node" attr.name="dipl::abbreviation" attr.type="string"/>
    <key id="k2" for="node" attr.name="norm::abbreviation" attr.type="string"/>
    <key id="k3" for="node" attr.name="dipl::comment" attr.type="string"/>
    <key id="k4" for="node" attr.name="norm::comment" attr.type="string"/>
    <key id="k5" for="node" attr.name="annis::doc" attr.type="string"/>
    <key id="k6" for="node" attr.name="annis::file" attr.type="string"/>
    <key id="k7" for="node" attr.name="norm::l1" attr.type="string"/>
    <key id="k8" for="node" attr.name="norm::l2" attr.type="string"/>
    <key id="k9" for="node" attr.name="norm::languages-used" attr.type="string"/>
    <key id="k10" for="node" attr.name="annis::layer" attr.type="string"/>
    <key id="k11" for="node" attr.name="norm::lemma" attr.type="string"/>
    <key id="k12" for="node" attr.name="annis::node_type" attr.type="string"/>
    <key id="k13" for="node" attr.name="norm::personal-anno-key-1" attr.type="string"/>
    <key id="k14" for="node" attr.name="norm::personal-anno-key-2" attr.type="string"/>
    <key id="k15" for="node" attr.name="norm::pos" attr.type="string"/>
    <key id="k16" for="node" attr.name="dipl::sentence" attr.type="string"/>
    <key id="k17" for="node" attr.name="annis::time" attr.type="string"/>
    <key id="k18" for="node" attr.name="annis::tok" attr.type="string"/>
    <graph edgedefault="directed" parse.order="nodesfirst" parse.nodeids="free" parse.edgeids="canonical">
        <data key="k0"><![CDATA[
# configure visualizations here
]]></data>
        <node id="exmaralda">
            <data key="k12">corpus</data>
        </node>
        <node id="exmaralda/test_doc">
            <data key="k1">dipl</data>
            <data key="k12">corpus</data>
            <data key="k13">personal-anno-value-1</data>
            <data key="k14">personal-anno-value-2</data>
            <data key="k2">norm</data>
            <data key="k3">was late for elicitation</data>
            <data key="k4">was on time</data>
            <data key="k5">test_doc</data>
            <data key="k7">eng</data>
            <data key="k8">deu</data>
            <data key="k9">eng,eng</data>
        </node>
        <node id="exmaralda/test_file.wav">
            <data key="k12">file</data>
            <data key="k6">tests/data/import/exmaralda/clean/import/exmaralda/test_file.wav</data>
        </node>
        <node id="exmaralda/test_doc#T286">
            <data key="k12">node</data>
            <data key="k18"> </data>
        </node>
        <node id="exmaralda/test_doc#T0">
            <data key="k12">node</data>
            <data key="k18"> </data>
        </node>
        <node id="exmaralda/test_doc#T1">
            <data key="k12">node</data>
            <data key="k18"> </data>
        </node>
        <node id="exmaralda/test_doc#T2">
            <data key="k12">node</data>
            <data key="k18"> </data>
        </node>
        <node id="exmaralda/test_doc#T3">
            <data key="k12">node</data>
            <data key="k18"> </data>
        </node>
        <node id="exmaralda/test_doc#T4">
            <data key="k12">node</data>
            <data key="k18"> </data>
        </node>
        <node id="exmaralda/test_doc#a_dipl_T286-T4">
            <data key="k10">dipl</data>
            <data key="k12">node</data>
            <data key="k16">1</data>
            <data key="k17">0-5.55555</data>
        </node>
        <node id="exmaralda/test_doc#a_norm_T286-T0">
            <data key="k10">norm</data>
            <data key="k11">I</data>
            <data key="k12">node</data>
            <data key="k15">PRON</data>
            <data key="k17">0-1.11111</data>
        </node>
        <node id="exmaralda/test_doc#a_norm_T0-T1">
            <data key="k10">norm</data>
            <data key="k11">be</data>
            <data key="k12">node</data>
            <data key="k15">VERB</data>
            <data key="k17">1.11111-2.22222</data>
        </node>
        <node id="exmaralda/test_doc#a_norm_T1-T2">
            <data key="k10">norm</data>
            <data key="k11">in</data>
            <data key="k12">node</data>
            <data key="k15">ADP</data>
            <data key="k17">2.22222-3.33333</data>
        </node>
        <node id="exmaralda/test_doc#a_norm_T2-T4">
            <data key="k10">norm</data>
            <data key="k11">New York</data>
            <data key="k12">node</data>
            <data key="k15">PRON</data>
            <data key="k17">3.33333-5.55555</data>
        </node>
        <edge id="e0" source="exmaralda/test_doc#a_dipl_T286-T4" target="exmaralda/test_doc#T286" label="Coverage/annis/">
        </edge>
        <edge id="e1" source="exmaralda/test_doc#a_dipl_T286-T4" target="exmaralda/test_doc#T0" label="Coverage/annis/">
        </edge>
        <edge id="e2" source="exmaralda/test_doc#a_dipl_T286-T4" target="exmaralda/test_doc#T1" label="Coverage/annis/">
        </edge>
        <edge id="e3" source="exmaralda/test_doc#a_dipl_T286-T4" target="exmaralda/test_doc#T2" label="Coverage/annis/">
        </edge>
        <edge id="e4" source="exmaralda/test_doc#a_dipl_T286-T4" target="exmaralda/test_doc#T3" label="Coverage/annis/">
        </edge>
        <edge id="e5" source="exmaralda/test_doc#a_norm_T286-T0" target="exmaralda/test_doc#T286" label="Coverage/annis/">
        </edge>
        <edge id="e6" source="exmaralda/test_doc#a_norm_T0-T1" target="exmaralda/test_doc#T0" label="Coverage/annis/">
        </edge>
        <edge id="e7" source="exmaralda/test_doc#a_norm_T1-T2" target="exmaralda/test_doc#T1" label="Coverage/annis/">
        </edge>
        <edge id="e8" source="exmaralda/test_doc#a_norm_T2-T4" target="exmaralda/test_doc#T2" label="Coverage/annis/">
        </edge>
        <edge id="e9" source="exmaralda/test_doc#a_norm_T2-T4" target="exmaralda/test_doc#T3" label="Coverage/annis/">
        </edge>
        <edge id="e10" source="exmaralda/test_doc#T286" target="exmaralda/test_doc#T0" label="Ordering/annis/">
        </edge>
        <edge id="e11" source="exmaralda/test_doc#T0" target="exmaralda/test_doc#T1" label="Ordering/annis/">
        </edge>
        <edge id="e12" source="exmaralda/test_doc#T1" target="exmaralda/test_doc#T2" label="Ordering/annis/">
        </edge>
        <edge id="e13" source="exmaralda/test_doc#T2" target="exmaralda/test_doc#T3" label="Ordering/annis/">
        </edge>
        <edge id="e14" source="exmaralda/test_doc#T3" target="exmaralda/test_doc#T4" label="Ordering/annis/">
        </edge>
        <edge id="e15" source="exmaralda/test_doc" target="exmaralda" label="PartOf/annis/">
        </edge>
        <edge id="e16" source="exmaralda/test_file.wav" target="exmaralda/test_doc" label="PartOf/annis/">
        </edge>
        <edge id="e17" source="exmaralda/test_doc#T286" target="exmaralda/test_doc" label="PartOf/annis/">
        </edge>
        <edge id="e18" source="exmaralda/test_doc#T0" target="exmaralda/test_doc" label="PartOf/annis/">
        </edge>
        <edge id="e19" source="exmaralda/test_doc#T1" target="exmaralda/test_doc" label="PartOf/annis/">
        </edge>
        <edge id="e20" source="exmaralda/test_doc#T2" target="exmaralda/test_doc" label="PartOf/annis/">
        </edge>
        <edge id="e21" source="exmaralda/test_doc#T3" target="exmaralda/test_doc" label="PartOf/annis/">
        </edge>
        <edge id="e22" source="exmaralda/test_doc#T4" target="exmaralda/test_doc" label="PartOf/annis/">
        </edge>
        <edge id="e23" source="exmaralda/test_doc#a_dipl_T286-T4" target="exmaralda/test_doc" label="PartOf/annis/">
        </edge>
        <edge id="e24" source="exmaralda/test_doc#a_norm_T286-T0" target="exmaralda/test_doc" label="PartOf/annis/">
        </edge>
        <edge id="e25" source="exmaralda/test_doc#a_norm_T0-T1" target="exmaralda/test_doc" label="PartOf/annis/">
        </edge>
        <edge id="e26" source="exmaralda/test_doc#a_norm_T1-T2" target="exmaralda/test_doc" label="PartOf/annis/">
        </edge>
        <edge id="e27" source="exmaralda/test_doc#a_norm_T2-T4" target="exmaralda/test_doc" label="PartOf/annis/">
        </edge>
    </graph>
</graphml>
