src/manipulator/snapshots/annatto__manipulator__re__tests__serialize.snap
---
source: src/manipulator/re.rs
expression: serialization.unwrap()
---
remove_nodes = []
remove_match = []
move_node_annos = false
node_annos = []
edge_annos = []
components = []
remove_subgraph = []

[node_names]

[namespaces]
